<resources>
    <string name="app_name">Just A Little Fit</string>
    <string name="title_name">Just A\nLittle\nFit</string>
    <string name="workoutNavigation">Workout Navigation</string>
    <string name="title_activity_create_workout">CreateWorkout</string>
    <string name="action_settings">Settings</string>
    <string name="home_title_string">Home</string>
    <string name="help_title_string">Help</string>
    <string name="today_title_string">Today\'s Workout(s)</string>
    <string name="assign_title_string">Assign Workout(s)</string>
    <string name="view_title_string">View Workout(s)</string>
    <string name="create_edit_title_string">Create/Edit Workout(s)</string>
    <string name="create_edit_exercise_title_string">Create/Edit Exercise(s)</string>
    <string name="create_edit_set_title_string">Create/Edit Set(s)</string>
    <string name="title_activity_base_navi_drawer">BaseNaviDrawerActivity</string>
    <string name="title_activity_assign">Assign</string>
    <string name="createEdit">CreateEdit</string>
    <string name="title_activity_create_edit_workout">CreateEditWorkout</string>
    <string name="exerciseHeader">Exercise:</string>
    <string name="workoutHeader">Workout:</string>
    <string name="home_string">Home</string>
    <string name="today_string">Today</string>
    <string name="assign_string">Assign</string>
    <string name="view_string">View</string>
    <string name="create_edit_string">Create/Edit</string>
    <string name="delete_item">Delete</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="delete_workout_alt">Delete Workout(s)</string>
    <string name="delete_all">Delete All</string>
    <string name="information">Information</string>
    <string name="display_opts">Display Options</string>
    <string name="renameWorkout">Rename Workout</string>
    <string name="lib_credits">Library Credits</string>
    <string name="add_workout">Add Workout</string>
    <string name="leave_menu">Leave Menu</string>
    <string name="discard_item">Discard</string>
    <string name="back_option">Back</string>
    <string name="discard_all_option">Discard All</string>
    <string name="tap_to_discard">Tap row(s) to select for deletion</string>
    <string name="add_item">Add</string>
    <string name="reposition_item">Reposition</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="got_it">Got It</string>
    <string name="save">Save</string>
    <string name="renameDialog_ExerciseTitle">Rename Exercise:</string>
    <string name="renameDialog_WorkoutTitle">Rename Workout:</string>
    <string name="renameDialog_Tag">renameDialogTag</string>
    <string name="renameBtnText">Rename</string>
    <string name="renameDialog_ExerciseSuccess">Exercise successfully renamed</string>
    <string name="renameDialog_WorkoutSuccess">Workout successfully renamed</string>
    <string name="noImplementsRenameDialogListener">doesn\'t implement RenameDialogListener.</string>
    <string name="assignFabNotiMsg">Choose date(s) then click here</string>
    <string name="workoutFabNotiMsg">Add Workout(s)</string>
    <string name="exerciseFabNotiMsg">Add Exercise(s)</string>
    <string name="setFabNotiMsg">Add Set(s)</string>
    <string name="viewFabNotiMsg">Add Exercise(s) / Set(s)</string>
    <string name="dialog_show_text">Prompt Assign Dialog:</string>
    <string name="fab_noti_show_text">Display Button Helper Text:</string>
    <string name="displayOptsDialogTag">Display Opts Dialog Tag</string>
    <string name="addWorkoutDialog_Title">Workout Name:</string>
    <string name="addWorkoutDialog_add">Add Workout</string>
    <string name="addWorkoutDialog_cancel">Cancel</string>
    <string name="addWorkout_requireName">You must enter a name for your workout</string>
    <string name="noRenameChanges">No changes were made, rename was the same as original</string>
    <string name="addWorkoutDialogTag">Create Workout Dialog Tag</string>
    <string name="addWorkout_success">Workout successfully added</string>
    <string name="noImplementsAddWorkoutDialogListener">doesn\'t implement AddWorkoutDialogListener.</string>
    <string name="assignWorkoutDateWhenNoneDialog_Title">Assign Workout(s) For This Date?</string>
    <string name="assignWorkoutDateWhenNoneDialog_assign">Yes, Assign Workout(s)</string>
    <string name="assignWorkoutDateWhenNoneDialog_no">No Thanks</string>
    <string name="assignWorkoutDateWhenNoneDialog_msg">- You can choose not to display this dialog via the \"Display Options\" from the Home Screen options menu</string>
    <string name="assignWorkoutDateWhenNoneDialogTag">Assign Workout Date When None Dialog Tag</string>
    <string name="noImplementsassignWorkoutDateWhenNoneDialogListener">doesn\'t implement AssignWorkoutDateWhenNoneDialog.</string>
    <string name="addExerciseDialog_Title">Exercise Name:</string>
    <string name="addExerciseDialog_add">Add Exercise</string>
    <string name="addExercise_requireName">You must enter a name for your exercise</string>
    <string name="addExerciseDialogTag">Create Exercise Dialog Tag</string>
    <string name="addExercise_success">Exercise successfully added</string>
    <string name="noImplementsAddExerciseDialogListener">doesn\'t implement AddExerciseDialogListener.</string>
    <string name="selectExerciseDialog_Title">Select Exercise</string>
    <string name="selectExerciseDialogTag">Select Exercise Dialog Tag</string>
    <string name="noImplementsSelectExerciseDialogListener">doesn\'t implement SelectExerciseDialogListener.</string>
    <string name="addSetDialog_Title">Create Set</string>
    <string name="addSetDialog_add">Add Set</string>
    <string name="addSetDialog_edit">Edit Set</string>
    <string name="addSetDialogTag">Create Set Dialog Tag</string>
    <string name="addSet_success">Set successfully added</string>
    <string name="editSet_success">Set successfully edited</string>
    <string name="noImplementsAddSetDialogListener">doesn\'t implement AddSetDialogListener.</string>
    <string name="addExerciseOrSetDialog_Title">Add Exercise or Set?</string>
    <string name="addExerciseOrSetDialog_addExercise">Add Exercise</string>
    <string name="addExerciseOrSetDialog_addSet">Add Set</string>
    <string name="addExerciseOrSetDialogTag">Add Exercise Or Set Dialog Tag</string>
    <string name="repositionWorkoutDialog_title">Select a position for the Workout:</string>
    <string name="repositionWorkoutDialog_reposition">Reposition</string>
    <string name="repositionWorkoutDialog_cancel">Cancel</string>
    <string name="repositionWorkoutDialogTag">Create Workout Dialog Tag</string>
    <string name="repositionWorkoutDialog_minMax_prefix">Select from within the range:</string>
    <string name="repositionWorkoutDialog_workouts">Workout List to Reposition</string>
    <string name="repositionWorkoutDialog_error">An error occurred while trying to reposition workout. Please try again.</string>
    <string name="noImplementsRepositionWorkoutDialogListener">doesn\'t implement RepositionWorkoutDialogListener.</string>
    <string name="repositionHelper">Reposition Helper Object</string>
    <string name="repositionedWorkout_success">Workout repositioned successfully</string>
    <string name="confirmDeleteWorkoutsDialogTag">Confirm Delete Workouts Dialog Tag</string>
    <string name="confirmDeleteExercisesDialogTag">Confirm Delete Exercises Dialog Tag</string>
    <string name="confirmDeleteSetsDialogTag">Confirm Delete Sets Dialog Tag</string>
    <string name="confirmDeleteWorkoutDialog_delete">Delete</string>
    <string name="confirmDeleteWorkoutDialog_error">An error occurred while trying to delete the workout(s). Please try again.</string>
    <string name="confirmDeleteWorkoutDialog_success">Workout(s) deleted successfully</string>
    <string name="confirmDeleteExerciseDialog_success">Exercise(s) deleted successfully</string>
    <string name="confirmDeleteSetDialog_success">Set(s) deleted successfully</string>
    <string name="no_workouts_to_delete">There are no workouts to delete</string>
    <string name="no_sets_to_delete">There are no sets to delete</string>
    <string name="no_exercises_to_delete">There are no exercises to delete</string>
    <string name="confirmDeleteWorkoutDialog_selectAll_bool">Title Boolean</string>
    <string name="noImplementsConfirmDeletionListener">doesn\'t implement ConfirmWorkoutsDeletionListener.</string>
    <string name="noImplementsConfirmExerciseDeletionListener">doesn\'t implement ConfirmExercisesDeletionListener.</string>
    <string name="noImplementsConfirmSetDeletionListener">doesn\'t implement ConfirmSetsDeletionListener.</string>
    <string name="infoDialogTag">Information Dialog Tag</string>
    <string name="infoDialogTagExercise">Information Dialog Tag Exercise</string>
    <string name="infoDialogTagSet">Information Dialog Tag Set</string>
    <string name="infoDialogTagAssign">Information Dialog Tag Assign</string>
    <string name="infoDialogTagChooseWorkoutDate">Information Dialog Tag Choose Workout Date</string>
    <string name="infoDialogTagForView">Information Dialog Tag Today</string>
    <string name="infoDialogTagViewChooser">Information Dialog Tag View Chooser</string>
    <string name="infoDialogTagView">Information Dialog Tag View Workout</string>
    <string name="infoDialogTagHome">Information Dialog Tag Home</string>
    <string name="deleteBySwipe">- Workouts can be deleted via a left or right swipe.</string>
    <string name="dragSort">- Workouts can be rearranged by long pressing the dark
        gray area on the far left of the row and dragging the workout either up or down.</string>
    <string name="onClick">- Clicking on a Workout will bring you to its Exercise list.</string>
    <string name="onLongClick">- Long clicking on a Workout will allow you to rename it.</string>
    <string name="onSave">- Leaving this screen will automatically save your changes.</string>
    <string name="deleteBySwipe_exercise">- Exercises can be deleted via a left or right swipe.</string>
    <string name="dragSort_exercise">- Exercises can be rearranged by long pressing the dark
        gray area on the far left of the row and dragging the workout either up or down.</string>
    <string name="onClick_exercise">- Clicking on an Exercise will bring you to its Set list.</string>
    <string name="onLongClick_exercise">- Long clicking on an Exercise will allow you to rename it.</string>
    <string name="deleteBySwipe_set">- Sets can be deleted via a left or right swipe.</string>
    <string name="dragSort_set">- Sets can be rearranged by long pressing the dark
        gray area on the far left of the row and dragging the workout either up or down.</string>
    <string name="onClick_set">- Clicking on a Set will allow you to edit its properties.</string>
    <string name="assignWorkoutDialogHeaderMsg">Choose Workout(s) To Assign:</string>
    <string name="assignChooseWorkoutDialogHeaderMsg">Choose Workout To View:</string>
    <string name="assignWorkoutDialog_assign">Assign</string>
    <string name="assignWorkoutDialog_cancel">Cancel</string>
    <string name="assignWorkoutDialogTag">Assign Workout Dialog Tag</string>
    <string name="enforceDatesForAssignment">You must select at least one date to assign to your workout(s)</string>
    <string name="enforceWorkoutsForAssignment">You must select at least one Workout</string>
    <string name="emptySetViewText">Click the + button to add a Set</string>
    <string name="weighted_reps">Weighted Reps</string>
    <string name="timed_reps">Timed Reps</string>
    <string name="in_kilograms">in kgs (kilograms)</string>
    <string name="in_pounds">in lbs (pounds)</string>
</resources>