<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navi_today"
            android:icon="@drawable/ic_calendar"
            android:title="@string/today_string" />
        <item
            android:id="@+id/navi_createEdit"
            android:icon="@drawable/ic_dumbbell"
            android:title="@string/create_edit_string" />
        <item
            android:id="@+id/navi_assign"
            android:icon="@drawable/ic_table_edit"
            android:title="@string/assign_string" />
        <item
            android:id="@+id/navi_view"
            android:icon="@drawable/ic_magnify"
            android:title="@string/view_string" />
    </group>

</menu>