<RelativeLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llWorkoutExerciseHeader"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/fallback_gray"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivDumbbell"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_dumbbell" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/tvWorkoutHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/workoutHeader"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tvWorkoutName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:layout_marginTop="-1dp"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginTop="-10dp">
                <TextView
                    android:id="@+id/tvExerciseHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/exerciseHeader"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tvExerciseName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:layout_marginTop="-1dp"
                    android:textSize="15dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlDefault"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        <TextView
            android:id="@+id/tvDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/emptySetViewText" />

        <ImageView
            android:id="@+id/ivDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDefault"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_dumbbell"
            android:gravity="center" />
    </RelativeLayout>

</RelativeLayout>