<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rgSetType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:checkedButton="@+id/rbWeightType"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbWeightType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/weighted_reps" />

        <RadioButton
            android:id="@+id/rbLoggedTimeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/timed_reps" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/llWeightedRepsOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llWeightedRepsEditField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Number of Reps: " />

            <EditText
                android:id="@+id/etRepCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number|numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWeightedAmountEditField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Weight Amount: " />

            <EditText
                android:id="@+id/etWeightAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number|numberDecimal" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rgRepOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rbLbs"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbLbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_pounds"
                android:checked="false" />

            <RadioButton
                android:id="@+id/rbKgs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_kilograms"
                android:checked="false" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTimedOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llTimedRepContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Number of Reps: " />

            <EditText
                android:id="@+id/etTimedRepCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number|numberDecimal" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="Timed Value (hours : mins: secs): " />

        <LinearLayout
            android:id="@+id/llTimedRepInputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etHours"
                style="@style/qtyTextView"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:maxLength="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text=":" />

            <EditText
                android:id="@+id/etMins"
                style="@style/qtyTextView"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:maxLength="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text=":" />

            <EditText
                android:id="@+id/etSeconds"
                style="@style/qtyTextView"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:maxLength="2"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>